# Clipped

./: .gitignore  LICENSE  README.md  THIRD-PARTY-LICENSES.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: build-and-release.yml  build.yml
docs/: README-JA.md
scripts/: fetch-ffmpeg.mjs  gen-icon.mjs
src/: App.tsx  Timeline.tsx  format.ts  i18n.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: hooks.nsh
