[package]
name = "clipped"
version = "0.1.0"
description = "動画切り抜き専用クリップエディタ"
authors = ["rikusen"]
edition = "2021"

[lib]
name = "clipped_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2.5.4"
tiny_http = "0.12.0"

[profile.release]
strip = true
lto = true
